# simple_tracer

./: CMakeLists.txt  darr.h  err_print.h  main.c  scene.h  vec_math.h  video_sdl.h
